--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -13,7 +13,19 @@
         android:layout_height="match_parent"
 
         >
-
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/progressBar"
+            android:padding="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#7CA5A4A4"
+            android:elevation="99dp"
+            android:indeterminateTint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <TextView
             android:id="@+id/tvTheLoai"
             android:layout_width="0dp"
