--- a/app/src/main/res/layout/bottom_dialog_layout.xml
+++ b/app/src/main/res/layout/bottom_dialog_layout.xml
@@ -15,6 +15,8 @@
         android:text="Đổi avatar"
         android:drawableLeft="@drawable/baseline_edit_24"
         android:textSize="20sp"
+        android:textColor="#000000"
+        android:drawableTint="@color/black"
         />
 
 </LinearLayout>
