--- a/app/src/main/res/layout/fragment_phim.xml
+++ b/app/src/main/res/layout/fragment_phim.xml
@@ -206,10 +206,10 @@
 
 
             <TextView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="20dp"
                 android:drawableLeft="@drawable/baseline_feed_24"
                 android:text="Thông tin"
                 android:textColor="@color/white"
@@ -260,8 +260,8 @@
                 android:layout_marginTop="20dp"
                 android:text="Đang cập nhật..."
                 android:textColor="#6FFFFFFF"
-                android:textSize="18sp"
-               />
+                android:textSize="18sp" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvDienVien"
                 android:layout_width="match_parent"
@@ -296,7 +296,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="30dp"
                 android:text="Bình luận phim"
                 android:textColor="@color/white"
                 android:textSize="18sp"
